--- a/app/components/dashboard/dashboard.html
+++ b/app/components/dashboard/dashboard.html
@@ -126,7 +126,7 @@
                 <div class="hpanel forum-box" style="overflow: hidden;">
 
                     <div class="panel-heading" style="border-bottom: 2px solid #34495E;">
-                        <h3>Top Industry Clusters</h3>
+                        <h3>Top Industries</h3>
                         <small class="small-column-title"># Companies</small>
                     </div>
 
