--- a/app/components/header/header_small.html
+++ b/app/components/header/header_small.html
@@ -1,8 +1,8 @@
 <div class="small-header">
     <div class="hpanel">
         <div class="panel-body" ng-class="{'header-embedded' : nav.embedded, 'no-sides' : !nav.embedded}">
-            <div class="pull-left" >
-                <ul ng-if="nav.community.type !== 'user' && nav.community.type !== 'company'" class="header-nav" tour-step order="1" title="People and Companies" content="To view people by role, or sort companies by revenue, visit the People and Company pages." placement="right">
+            <div class="pull-left" tour-step order="1" title="People and Companies" content="To view people by role or industry, or sort companies by investment, visit the People and Company pages." placement="bottom">
+                <ul ng-if="nav.community.type !== 'user' && nav.community.type !== 'company'" class="header-nav">
                     <li ui-sref="{{'community.dashboard' + nav.nav_url}}" ng-class="{ 'active' : nav.state.current.name == 'community.dashboard' }">
                         <a>OVERVIEW</a>
                     </li>
