--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -156,7 +156,7 @@
                 </ul>
             </li>
 
-            <li ng-repeat="(k, v) in nav.networks" class="active">
+            <li ng-repeat="(k, v) in nav.networks" class="active" tour-step order="2" title="Private Networks" content="Networks are groups of companies and people who are connected through a private, invitation-only community.<br><br>Examples of networks include startup accelerators, coworking spaces, mentorship groups, and investment funds." placement="right">
                 <a style="cursor:default;"><span>
 
                     {{k}}
@@ -173,7 +173,7 @@
                 </ul>
             </li>
 
-            <li class="active" ng-show="nav.top.parents" tour-step order="3" title="Industry Clusters" content="A cluster is an entrepreneurial ecosystem in support of a specific industry.<br><br>Clusters are made up of mentors, investors, companies, accelerators, coworking spaces, and events that connect people within the community and foster the creation of new business." placement="right">
+            <li class="active" ng-show="nav.top.parents" tour-step order="3" title="Industry Clusters" content="A cluster is an entrepreneurial ecosystem in support of a specific industry.<br><br>Clusters are made up of mentors, investors, companies, accelerators, coworking spaces, and events that connect people and foster creation of new startups." placement="right">
                 <a style="cursor:default;"><span>
 
                     Industries
