--- a/app/frontend/ghost/content/themes/nuevo/assets/css/style.css
+++ b/app/frontend/ghost/content/themes/nuevo/assets/css/style.css
@@ -491,11 +491,11 @@ div.home div.timeline article{
 div.home div.timeline article.ep-last{ margin-top: 120px; float: right; }
 div.home div.timeline article span.arrow{
 	display: block;
-	width: 5px;
-	height: 5px;
+	width: 15px;
+	height: 15px;
 	background: #fff;
-	top: 10%;
-	left: 443px;
+	margin-top: 15px;
+	left: 438px;
 	margin-left: 0;
 	position: absolute;
 	z-index: 100;
@@ -509,7 +509,7 @@ div.home div.timeline article span.arrow{
 	-o-transition: all 300ms linear;
 	transition: all 300ms linear;
 }
-div.home div.timeline article.ep-last span.arrow{ left: -47px; margin-left: 0; }
+div.home div.timeline article.ep-last span.arrow{ left: -51px; margin-left: 0; }
 div.home div.timeline article:hover span.arrow{ background: #76A33D; }
 div.home div.timeline article header time{
 	position: absolute;
