--- a/app/components/welcome/welcome.profile.html
+++ b/app/components/welcome/welcome.profile.html
@@ -24,7 +24,7 @@
                 your email address is <a style="color:#4ea5e0;" editable-email="welcome.user.profile.email">{{welcome.user.profile.email}}</a><br/>
                 and your headline is <a style="color:#4ea5e0;" editable-text="welcome.user.profile.headline">{{welcome.user.profile.headline || 'empty'}}</a>.
                 <br/><br/>
-                Select a primary industry you most closely associate with:
+                Select an industry you most closely associate with:
                 <select class="form-control m-b" ng-model="welcome.selectedParent" style="margin-bottom: 5px;" required>
                     <option ng-repeat="parent in welcome.parents">{{ parent }}</option>
                 </select>
