--- a/app/less/panels.less
+++ b/app/less/panels.less
@@ -42,7 +42,7 @@
   border-radius: 2px;
   padding: 10px 20px;
   position: relative;
-  overflow: hidden;
+  //overflow: hidden; this breaks ui-select
 }
 
 .panel-collapse .panel-body {
