--- a/app/components/header/header_small.html
+++ b/app/components/header/header_small.html
@@ -6,8 +6,8 @@
                     <li ui-sref="{{'community.dashboard' + nav.nav_url}}" ng-class="{ 'active' : nav.state.current.name == 'community.dashboard' }">
                         <a>OVERVIEW</a>
                     </li>
-                    <li ui-sref="{{'user.list' + nav.nav_url}}" ng-class="{ 'active' : nav.state.current.name == 'user.list' }" ng-click="$event.stopPropagation()">
-                        <a>PEOPLE</a>
+                    <li ng-class="{ 'active' : nav.state.current.name == 'user.list' }">
+                        <a ui-sref="{{'user.list' + nav.nav_url}}" >PEOPLE</a>
                     </li>
                     <li ui-sref="{{'company.list' + nav.nav_url}}" ng-class="{ 'active' : nav.state.current.name == 'company.list' }">
                         <a>COMPANIES</a>
