--- a/app/components/header/header_small.html
+++ b/app/components/header/header_small.html
@@ -7,7 +7,7 @@
                         <a>OVERVIEW</a>
                     </li>
                     <li ui-sref="{{'user.list' + nav.nav_url}}" ng-class="{ 'active' : nav.state.current.name == 'user.list' }">
-                        <a ng-click="$event.preventDefault();">PEOPLE</a>
+                        <a>PEOPLE</a>
                     </li>
                     <li ui-sref="{{'company.list' + nav.nav_url}}" ng-class="{ 'active' : nav.state.current.name == 'company.list' }">
                         <a>COMPANIES</a>
