--- a/app/components/dashboard/dashboard.html
+++ b/app/components/dashboard/dashboard.html
@@ -35,7 +35,7 @@
                     <div class="col-xs-8">
                         <div class="pull-left">
                             <h2 class="font-light m-b-xs">Leaders</h2>
-                            <div ng-repeat="lead in dashboard.top.leaders | limitTo: 5" style="float:left;">
+                            <div ng-repeat="lead in dashboard.top.leaders | limitTo: 5" style="display: inline-block;">
                                 <a class="text-info" ui-sref="user.dashboard({profile: lead.value, location_path: lead.path.key, community: {}})">
                                     <small>
                                         <span ng-if="$last && $index !== 0">
