placeholder for companies

--- a/app/components/users/user.dashboard.companies.html
+++ b/app/components/users/user.dashboard.companies.html
@@ -7,6 +7,7 @@
                         <a ui-sref="{{'user.list' + nav.nav_url}}">
                             <h3>Founder</h3>
                             <h1 class="text-info">{{profile.companies.count.founder}}</h1>
+                            <!--<small class="text-info" ng-click="nav.addCompany();">+ Add Company</small>-->
                         </a>
                     </div>
                 </div>
