--- a/app/components/companies/company.add.html
+++ b/app/components/companies/company.add.html
@@ -80,9 +80,11 @@
         </div>
     </div>
     <div class="modal-footer">
+        <button type="button" class="btn btn-default" ng-click="$close();$state.reload();" style="margin-right: 10px;">Cancel</button>
+        <button type="button" class="btn btn-danger pull-left" ng-click="welcome.deleteCompany(welcome.community.key)" ng-show="welcome.update">Delete {{::welcome.community.profile.name || 'Company'}}</button>
         <input ng-show="!welcome.updated" ng-click="welcome.addCompany($event)" type="submit" class="finish btn-success btn pull-right" ng-class="{'disabled' : disabled || welcome.working || !welcome.selectedCompany}" value="{{ (welcome.updateCompany ? 'Update ' : 'Add ') + (welcome.selectedCompany.name || 'Company') }}"/>
-        <button type="button" class="btn btn-default pull-right" style="margin-right: 15px;" ng-show="welcome.selectedCompany && !welcome.working && !welcome.update" ng-click="welcome.selectedCompany = undefined; welcome.company = undefined; welcome.alert = undefined; welcome.updateRole = false; welcome.selectedRole = 'none'; welcome.updateCompany = false; welcome.submitted = false; welcome.notlisted = false; welcome.dups = undefined;">Clear Form</button>
-        <div loading-bars ng-show="welcome.working" style="padding-top: 5px; float: left;"></div>
-        <button type="button" class="btn btn-default" ng-click="$close();$state.reload();" style="margin-right: 10px;">Close</button>
+        <button type="button" class="btn btn-default pull-right" style="margin-right: 15px;" ng-show="welcome.selectedCompany && !welcome.working && !welcome.update" ng-click="welcome.selectedCompany = undefined; welcome.company = undefined; welcome.alert = undefined; welcome.updateRole = false; welcome.selectedRole = 'none'; welcome.updateCompany = false; welcome.submitted = false; welcome.notlisted = false; welcome.dups = undefined;">Clear Form
+            <div loading-bars ng-show="welcome.working" style="padding-top: 5px; float: left;"></div>
+        </button>
     </div>
 </div>
