--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -39,7 +39,7 @@
                         </li>
                         <li ng-if="!nav.user">
                             <div style="margin: 20px 0 0 20px;">
-                                <button class="btn btn-info" ng-click="nav.requestInvitation()" style="font-size: 16px; color: #fff;">Join Free</button>
+                                <button class="btn btn-info" ng-click="nav.requestInvitation()" style="font-size: 16px; color: #fff;">Request Invite</button>
                             </div>
                         </li>
                         <li ng-if="!nav.user">
@@ -81,7 +81,7 @@
                     </li>
                     <li ng-if="!nav.user" class="dropdown">
                         <div style="padding-top: 12px; margin-right: 8px;">
-                            <button class="btn btn-info" ng-click="nav.requestInvitation()" style="font-size: 16px; color: #fff;">Join Free</button>
+                            <button class="btn btn-info" ng-click="nav.requestInvitation()" style="font-size: 16px; color: #fff;">Request Invite</button>
                         </div>
                     </li>
                     <li ng-if="!nav.user" class="dropdown">
