--- a/app/components/auth/login.html
+++ b/app/components/auth/login.html
@@ -13,6 +13,7 @@
                         <h4 class="text-center" style="margin-bottom: 13px;">
                             <button class="btn btn-info" ng-click="auth.authenticate('linkedin')" ng-class="{'disabled' : auth.working}">Log in using Linkedin</button>
                             <span loading-bars ng-show="auth.working"></span>
+                            <br><p style="font-size:11px; margin: 12px 0 -12px 0;">We use Linkedin to retrieve your basic profile details only.</p>
                         </h4>
 
                         <div ng-show="auth.alert">
