--- a/app/components/settings.html
+++ b/app/components/settings.html
@@ -6,7 +6,7 @@
                     <i class="pe-7s-config fa-4x"></i>
                 </div>
                 <h2>Settings</h2>
-                <small>Make changes to the networks, clusters, and locations that you are a leader of.</small>
+                <small>Make changes to the networks, industries, and locations that you are a leader of.</small>
             </div>
         </div>
     </div>
@@ -36,7 +36,7 @@
         <div class="hpanel hnavyblue col-xs-12 col-sm-6 col-md-4" >
             <div class="panel-body">
                 <div class="stats-title">
-                    <h3>Clusters</h3>
+                    <h3>Industries</h3>
                 </div>
                 <hr>
                 <div ng-repeat="(k, v) in nav.user.roles.leader">
@@ -47,7 +47,7 @@
                 </div>
                 <ul class="nav nav-second-level" style="margin-left: -15px;">
                     <li ng-if="nav.user.communities.indexOf(nav.user.profile.home) > -1">
-                        <a ng-click="nav.editCommunity({type:'cluster'});" style="color: #aaa;">+&nbsp;&nbsp;Add Cluster</a>
+                        <a ng-click="nav.editCommunity({type:'cluster'});" style="color: #aaa;">+&nbsp;&nbsp;Add Industry</a>
                     </li>
                 </ul>
             </div>
