--- a/app/components/companies/company.list.item.html
+++ b/app/components/companies/company.list.item.html
@@ -1,14 +1,14 @@
 <div class="col-md-12 dash-table">
     <div>
-        <a ui-sref="company.dashboard({profile: item.value, location_path: item.path.key, location: nav.community, community: item.value, top: nav.top, communities: nav.communities })" title="View {{::item.value.profile.name | words:0}}'s Profile"><img
+        <a ui-sref="company.dashboard({profile: item.value, location_path: item.path.key, location: nav.community, community: item.value, top: nav.top, communities: nav.communities, user: nav.user })" title="View {{::item.value.profile.name | words:0}}'s Profile"><img
                 ng-src="{{item.value.profile.avatar || '/public/images/blank_startup.jpg'}}" alt="{{::item.value.profile.name}}" class="user-img widget-image pull-left" onerror="this.src='images/blank_startup.jpg'"/></a>
     </div>
     <div class="user-row" ng-class="{'user-row-border': $index % 2 == 0}">
-        <a ui-sref="company.dashboard({profile: item.value, location_path: item.path.key, location: nav.community, community: item.value, top: nav.top, communities: nav.communities })" title="View {{::item.value.profile.name | words:0}}'s Profile" style="float: left; "><strong>{{::item.value.profile.name}} </strong></a>
+        <a ui-sref="company.dashboard({profile: item.value, location_path: item.path.key, location: nav.community, community: item.value, top: nav.top, communities: nav.communities, user: nav.user })" title="View {{::item.value.profile.name | words:0}}'s Profile" style="float: left; "><strong>{{::item.value.profile.name}} </strong></a>
         <a ng-show="{{(item.value.profile.summary).length > 0}}" title="Show Summary" ng-click="showSummary = !showSummary" class="user-summary">&nbsp;&nbsp;<i class="fa fa-chevron-down fa-fw"></i>
         </a>
         <li ng-repeat="val in item.value.profile.parents" class="role-right">
-            <a ui-sref="search.dashboard({location_path: nav.location.key, community: nav.location, query: val})" class="btn btn-xs btn-outline btn-default">{{val[0].toUpperCase() + val.slice(1);}}</a>
+            <a ui-sref="search.dashboard({location_path: nav.location.key, community: nav.location, query: val, user: nav.user, communities: nav.communities, top: nav.top})" class="btn btn-xs btn-outline btn-default">{{val[0].toUpperCase() + val.slice(1);}}</a>
         </li>
         <br>
         <div class="dash-row">
