--- a/app/components/dashboard/dashboard.html
+++ b/app/components/dashboard/dashboard.html
@@ -23,7 +23,7 @@
                     <div style="padding-right:0;">
                         <div ng-repeat="p in dashboard.top.parents | limitTo: 3" style="padding-left: 0; padding-right: 0; ">
                             <div class="col-xs-3" style="margin-top:-3px; padding-left: 0; padding-right: 0; text-align: right; overflow: hidden; text-overflow: ellipsis;"><a ui-sref="community.dashboard({community_path: p.label, community: nav.communities[p.label], query: '*', location_path: nav.location.key})" style="white-space:nowrap;">{{p.label[0].toUpperCase() + p.label.slice(1);}}</a></div>
-                            <div class="col-xs-9" style="padding-left: 10px; padding-right: 0;"><progressbar value="p.value" max="nav.max" type="success" class="progress-small full"></progressbar></div>
+                            <div class="col-xs-9" style="padding-left: 10px; padding-right: 0;"><uib-progressbar value="p.value" max="nav.max" type="success" class="progress-small full"></uib-progressbar></div>
                         </div>
                     </div>
                 </div>
@@ -134,7 +134,7 @@
                         <div class="row">
                             <div class="col-xs-10 forum-heading">
                                 <a ui-sref="community.dashboard({community_path: item.label, community: nav.communities[item.label], query: '*', location_path: nav.location.key})"><h4 style="font-weight: 200;">{{item.label[0].toUpperCase() + item.label.slice(1);}}</h4></a>
-                                <progressbar value="item.value" max="nav.max" type="success" class="progress-small full" style="margin-top: 7px;"></progressbar>
+                                <uib-progressbar value="item.value" max="nav.max" type="success" class="progress-small full" style="margin-top: 7px;"></uib-progressbar>
                             </div>
                             <div class="col-xs-2 forum-info">
                                 <span class="number number-column">{{item.value}}</span>
@@ -156,7 +156,7 @@
                         <div class="row">
                             <div class="col-xs-10 forum-heading">
                                 <a ui-sref="search.dashboard({location_path: dashboard.location_path, community_path: dashboard.community_path, query: item.value})"><h4 style="font-weight: 200;">{{item.value}}</h4></a>
-                                <progressbar ng-attr-value="(item.count/dashboard.top.industries.entries[0].count)*100" type="default" class="progress-small full" style="margin-top: 7px;"></progressbar>
+                                <uib-progressbar ng-attr-value="(item.count/dashboard.top.industries.entries[0].count)*100" type="default" class="progress-small full" style="margin-top: 7px;"></uib-progressbar>
                             </div>
                             <div class="col-xs-2 forum-info">
                                 <span class="number number-column">{{item.count}}</span>
@@ -178,7 +178,7 @@
                         <div class="row">
                             <div class="col-xs-10 forum-heading">
                                 <a ui-sref="search.dashboard({location_path: dashboard.location_path, community_path: dashboard.community_path, query: item.value})"><h4 style="font-weight: 200;">{{item.value}}</h4></a>
-                                <progressbar ng-attr-value="(item.count/dashboard.top.skills.entries[0].count)*100" type="info" class="progress-small full" style="margin-top: 7px;"></progressbar>
+                                <uib-progressbar ng-attr-value="(item.count/dashboard.top.skills.entries[0].count)*100" type="info" class="progress-small full" style="margin-top: 7px;"></uib-progressbar>
                             </div>
                             <div class="col-xs-2 forum-info">
                                 <span class="number number-column">{{item.count}}</span>
