removed user.data

--- a/app/less/various.less
+++ b/app/less/various.less
@@ -401,7 +401,7 @@ body #inbox_header_text, body #inbox_mark_read, body #inbox_footer, body #inbox_
 
 .user-img {
   height:58px;
-  max-width: 58px;
+  width: 58px;
 }
 
 .user-summary {
