--- a/app/components/users/user.dashboard.html
+++ b/app/components/users/user.dashboard.html
@@ -9,7 +9,7 @@
                 </div>
                 <div style="margin:-15px 0;">
                     <span ng-if="profile.user.profile.parents[0]" class="btn btn-default btn-xs">
-                        <a ui-sref="community.dashboard({location_path: profile.user.profile.parents[0], community: profile.communities[profile.user.profile.parents[0]], query: &quot;&#42;&quot;})">{{::profile.user.profile.parents[0][0].toUpperCase() + profile.user.profile.parents[0].slice(1);}}</a>
+                        <a ui-sref="community.dashboard({location_path: profile.user.profile.home, community_path: profile.user.profile.parents[0], community: profile.communities[profile.user.profile.parents[0]], query: &quot;&#42;&quot;})">{{::profile.user.profile.parents[0][0].toUpperCase() + profile.user.profile.parents[0].slice(1);}}</a>
                     </span>
                     <span ng-if="profile.user.profile.home" class="btn btn-success btn-xs">
                         <a ui-sref="community.dashboard({location_path: profile.user.profile.home, community: profile.communities[profile.user.profile.home], query: &quot;&#42;&quot;})"  style="color: #fff;">{{::profile.communities[profile.user.profile.home].profile.name}}</a>
