--- a/app/components/email.html
+++ b/app/components/email.html
@@ -1,1 +1,1 @@
-<iframe src="http://email.startupcommunity.org" name="email_frame" id="framed_email" style="border: none; margin-top: 30px; height: 85vh; width: 100%;"></iframe>
+<button ng-click="email.login()">Login</button><iframe src="http://email.startupcommunity.org" name="email_frame" id="framed_email" style="border: none; margin-top: 30px; height: 85vh; width: 100%;"></iframe>
