--- a/app/components/email.html
+++ b/app/components/email.html
@@ -1,1 +1,3 @@
-<button ng-click="email.login()">Login</button><iframe src="https://email2.startupcommunity.org" name="email_frame" id="framed_email" style="border: none; margin-top: 30px; height: 85vh; width: 100%;"></iframe>
+<button ng-click="email.login()">Login</button>
+<span loading-bars ng-show="email.working"></span>
+<iframe src="https://email2.startupcommunity.org" name="email_frame" id="framed_email" style="border: none; margin-top: 30px; height: 85vh; width: 100%;"></iframe>
