--- a/app/components/email.html
+++ b/app/components/email.html
@@ -1,3 +1,1 @@
-<button ng-click="email.login()">Login</button>
-<span loading-bars ng-show="email.working"></span>
-<iframe src="https://email.startupcommunity.org" name="email_frame" id="framed_email" style="border: none; margin-top: 30px; height: 85vh; width: 100%;"></iframe>
+<iframe srcdoc="{{email.frame_content}}" name="email_frame" id="framed_email" style="border: none; margin-top: 30px; height: 85vh; width: 100%;"></iframe>
