fix for uib-tabset

--- a/app/components/search/search.dashboard.html
+++ b/app/components/search/search.dashboard.html
@@ -1,23 +1,23 @@
 <div>
     <div class="hpanel">
-        <tabset>
-            <tab>
-                <tab-heading>
+        <uib-tabset>
+            <uib-tab>
+                <uib-tab-heading>
                     People
-                </tab-heading>
+                </uib-tab-heading>
                 <div class="panel-body" style="padding: 25px;">
                     <div ui-view="people"></div>
                 </div>
-            </tab>
-            <tab>
-                <tab-heading>
+            </uib-tab>
+            <uib-tab>
+                <uib-tab-heading>
                     Companies
-                </tab-heading>
+                </uib-tab-heading>
                 <div class="panel-body" style="padding: 25px;">
                     <div ui-view="companies"></div>
                 </div>
-            </tab>
-        </tabset>
+            </uib-tab>
+        </uib-tabset>
     </div>
 </div>
 
