--- a/app/components/companies/company.add.html
+++ b/app/components/companies/company.add.html
@@ -23,7 +23,7 @@
             <div style="padding: 20px;">
 
                 <div class="form-group" ng-show="!welcome.update">
-                    <input type="text" ng-model="welcome.company" placeholder="Search by company name.." autofocus="true" typeahead="company.name for company in welcome.getCompanies($viewValue)" typeahead-editable="true" typeahead-on-select="welcome.selectedCompany = $item; welcome.notlisted = false;" class="form-control input-lg">
+                    <input type="text" ng-model="welcome.company" placeholder="Search by company name.." autofocus="true" uib-typeahead="company.name for company in welcome.getCompanies($viewValue)" typeahead-editable="true" typeahead-on-select="welcome.selectedCompany = $item; welcome.notlisted = false;" class="form-control input-lg">
                     <a style="padding-top: 3px; color: #777;" class="pull-right" ng-click="welcome.notlisted = !welcome.notlisted">not listed?  add it here.</a>
                 </div>
                 <div alert-box this-alert="welcome.alert" style="padding-top:10px;"></div>
