--- a/app/components/email.html
+++ b/app/components/email.html
@@ -1,1 +1,2 @@
+<button ng-click="email.createList()">Create List</button>
 <iframe srcdoc="{{email.frame_content}}" name="email_frame" id="framed_email" style="border: none; margin-top: 30px; height: 1500px; width: 100%;"></iframe>
