--- a/app/components/networks/networks.list.html
+++ b/app/components/networks/networks.list.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-xs-12 col-sm-6" ng-repeat="parent in networks.network_parents track by $index">
+    <div class="col-xs-12 col-sm-6" ng-repeat="parent in networks.network_parents track by $index" ng-if="networks.network_parents.length > 0">
         <div class="hpanel" ng-class="::parent.color">
             <div class="panel-body" style="padding: 10px 5px;">
                 <div class="col-xs-8">
@@ -14,10 +14,17 @@
                 </div>
             </div>
             <div class="panel-footer" style="background: #fff;">
-                <div ng-repeat="item in networks.networks[parent.id] track by $index">
-                    {{item.profile.name}}
-                </div>
+                <ul class="nav nav-second-level" ng-if="networks.networks[parent.id]">
+                    <li ng-repeat="item in networks.networks[parent.id] track by $index">
+                        <a ui-sref="{{'community.dashboard' + nav.nav_jump}}" ng-class="{active: nav.path.includes('/' + item.key)}" ng-click="nc_working = true">
+                            <i ng-class="'fa ' + item.profile.icon"></i> {{item.community_profiles[nav.location.key].name}}
+                            <span loading-bars ng-show="nc_working"></span>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
+
+    <div ng-show="networks.network_parents.length === 0" style="text-align: center" ng-cloak><h2><br/>Nothing here!</h2><br/><br/></div>
 </div>
