--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -122,6 +122,7 @@
     <aside id="menu" ng-if="!nav.embedded">
 
         <ul side-navigation class="nav" id="side-menu" style="border-top: 1px solid #e4e5e7; margin-bottom: 50px;">
+            <button ng-click="nav.createBrand()">create brand</button>
 
             <li class="active">
                 <ul class="nav nav-second-level">
